--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      </div>
      <div class="half-width">
        <h2> BIG DREAM </h2>
-       <h4> become a web developer </h4>
+       <h4> Become a web developer </h4>
        <p> I already learned HTML, CSS and much of a JS. I could also learn my grandma to make
        a website. My aim is to make at least three more web sites. Maybe just even more three
        more single page aplications. At least, maybe use some React. Or at the end, why not
